--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zh.loan">
-
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:name=".MAPP"
         android:allowBackup="true"
@@ -10,13 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MyBillActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.InfoActivity"></activity>
+
+        <activity android:name=".activity.LoginActivity"></activity>
+
+        <activity android:name=".activity.MyBillActivity"></activity>
+
+        <activity android:name=".activity.MyBalanceActivity"></activity>
+
+        <activity android:name=".activity.ApplyLimitActivity"></activity>
+
+        <activity android:name=".activity.ServiceActivity"></activity>
     </application>
 
 </manifest>
