--- a/http/build.gradle
+++ b/http/build.gradle
@@ -15,7 +15,7 @@ android {
     buildTypes {
         release {
             //"/yihaocar/"
-            buildConfigField 'String', 'HTTP_SERVER', "\"https://api.youzhihr.com/app/\""
+            buildConfigField 'String', 'HTTP_SERVER', "\"http://daikuanpingtai.top/\""
             minifyEnabled config.MINIFY_DISABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'progua rd-rules.pro'
         }
@@ -23,7 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             minifyEnabled config.MINIFY_DISABLED
             debuggable true
-            buildConfigField 'String', 'HTTP_SERVER', "\"https://test.youzhihr.com/WawHRServer/app/\""//http://test.youzhihr.com/WawHRServer/
+            buildConfigField 'String', 'HTTP_SERVER', "\"http://daikuanpingtai.top/\""//http://test.youzhihr.com/WawHRServer/
         }
     }
 
