--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity android:name=".activity.RegisterActivity"></activity>
 
         <activity android:name=".activity.ForgetActivity"></activity>
+
+        <activity android:name=".activity.CashActivity"></activity>
     </application>
 
 </manifest>
