--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api project(':http')
-    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+    api 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
 }
