--- a/http/build.gradle
+++ b/http/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 //        exclude module: 'com.squareup.okhttp3:okhttp:3.4.1'
 //        exclude module: 'com.squareup.okio:okio:1.9.0'
 //    }
-    implementation rootProject.ext.dependencies["okhttp"]
+    api rootProject.ext.dependencies["okhttp"]
     implementation rootProject.ext.dependencies["externalOKIO"]
     implementation rootProject.ext.dependencies["okhttp_log"]
     implementation rootProject.ext.dependencies["retrofit"]
