--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         <activity android:name=".activity.AbountActivity"></activity>
 
         <activity android:name=".activity.SettingActivity"></activity>
+
+        <activity android:name=".activity.StatusTipActivity"></activity>
     </application>
 
 </manifest>
