--- a/http/build.gradle
+++ b/http/build.gradle
@@ -15,7 +15,7 @@ android {
     buildTypes {
         release {
             //"/yihaocar/"
-            buildConfigField 'String', 'HTTP_SERVER', "\"http://47.75.122.66/index.php/\""
+            buildConfigField 'String', 'HTTP_SERVER', "\"http://47.75.122.66/\""
             minifyEnabled config.MINIFY_DISABLED
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'progua rd-rules.pro'
         }
@@ -23,7 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             minifyEnabled config.MINIFY_DISABLED
             debuggable true
-            buildConfigField 'String', 'HTTP_SERVER', "\"http://47.75.122.66/index.php/\""//http://test.youzhihr.com/WawHRServer/
+            buildConfigField 'String', 'HTTP_SERVER', "\"http://47.75.122.66/\""//http://test.youzhihr.com/WawHRServer/
         }
     }
 
