--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,35 +11,27 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
-
-
-//    signingConfigs {
-//        debugConfig {
-////            keyAlias 'guodong_debug'
-////            keyPassword 'guodong2017'
-////            storeFile file('../guodong_debug.jks')
-////            storePassword 'guodong2017'
-//            keyAlias 'realease'
-//            keyPassword 'moumima4'
-//            storeFile file('../waw.jks')
-//            storePassword 'moumima4'
-//        }
-//        releaseConfig {
-//            keyAlias 'realease'
-//            keyPassword 'moumima4'
-//            storeFile file('../waw.jks')
-//            storePassword 'moumima4'
-//        }
-//    }
-
     buildTypes {
         release {
-            debuggable true
-//            signingConfig signingConfigs.releaseConfig
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-        debug {
-            debuggable true
-//            signingConfig signingConfigs.releaseConfig
+    }
+
+    signingConfigs {
+        release {
+            keyAlias 'release'
+            keyPassword '123456'
+            storeFile file('D:/workSpace/Loan/loan.jks')
+            storePassword '123456'
+        }
+
+    }
+
+    // 设置apk打包命名
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "${variant.applicationId}_${variant.versionName}_${variant.versionCode}.apk"
         }
     }
 
@@ -59,12 +51,6 @@ android {
     }
 
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
 
 
 
