--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     api project(':http')
     api 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'pub.devrel:easypermissions:2.0.1'
 }
