--- a/conf.gradle
+++ b/conf.gradle
@@ -60,14 +60,14 @@ ext {
             MIN_SDK_VERSION    : 21,
 
             // 目标版本
-            TARGET_SDK_VERSION : 26,//26
+            TARGET_SDK_VERSION : 14,//26
 
             // 设置是否使用混淆
             MINIFY_ENABLED     : true,
             MINIFY_DISABLED    : false,
 
             // 应用程序包名
-            APPLICATION_ID     : 'com.gdlife.candypie',
+//            APPLICATION_ID     : 'com.gdlife.candypie',
 
 //            DEBUGENABLE        : false,
 
