--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         release {
             keyAlias 'release'
             keyPassword '123456'
-            storeFile file('D:/workSpace/Loan/loan.jks')
+            storeFile file('../Loan/loan.jks')
             storePassword '123456'
         }
 
